MSS-1471-overlapping issue done

--- a/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/search.scss
+++ b/movado_redesign/cartridges/app_custom_movado_redesign/cartridge/client/default/scss/search.scss
@@ -515,6 +515,9 @@
         @include media-breakpoint-up(md) {
           font-size: rem(15);
           margin-left: rem(12);
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
         }
 
         @include media-breakpoint-down(sm) {
